# torchcor

./: .gitattributes  .gitignore  Cable Equation.ipynb  FEM - 2D Heat Equation.ipynb  FEM.ipynb  Heat equation.ipynb  LICENSE  PCG.ipynb  README.md  assemble.py  atrial_simulation.py  atrium.py  atrium_lut.py  boundary.py  heat_equation_fem.py  ionic.py  monodomain_equation.py  preconditioner.py  pyproject.toml  reorder.py  requirements.txt  solver.py  sovler.py  utils.py  ventricle_lut.py  ventricle_simulation.py  verification.py  visualize.py  work notes  work notes.md
core/: __init__.py  conductivity.py  preconditioner.py  solver.py  stimulation.py  utils.py  visualize.py
demo/: __init__.py  atrium.py  atrium_courtemanche.py  atrium_mitchell.py  tools.py  ventricle.py
docs/: biv.avi  case_1.avi
gnn/: atrium.py  tools.py  train.py
heat_equation/: 2D.py  3D.py  3DSurface.py  3d_surface.pkl  Check solution.ipynb  heat equation_3DSurface.py  heat_equation_2D.py  heat_equation_3DSurface.py  test.py
hpc/: atrium.py  atrium_cm.py  latine_conductivity.py  run.sh
ionic/: CourtemancheRamirezNattel.py  CourtemancheRamirezNattelLUT.py  MitchellSchaeffer.py  ModifiedMS2v.py  TenTusscher.py  TenTusscherPanfilov.py  TenTusscherPanfilovLUT.py  __init__.py  base.py  courtemanche_ramirez_nattel_1998.py  help.py  models.py  single_cell_model.py  temp.py  ten_tusscher_model_2006_IK1Ko_endo_units.py  test.py
mesh/: material.py  stimulus.py  triangulation.py
model/: __init__.py  atrium.py  atrium_hpc.py  monodomain.py  ventricle.py
monodomain/: __init__.py  atrium.py  atrium_courtemanche.py  atrium_hpc.py  atrium_mitchell.py  case_10.py  case_10_test.py  info.py  models.py  monodomain_equation.py  simulator.py  spiral.py  tools.py  ventricle.py  ventricle_hpc.py
monodomain_equation/: Monodomain.ipynb  monodomain_equation.py  spiral.py  tools.py
notebooks/: Biv.ipynb  FDM - Heat equation - CPU.ipynb  FEM - 2D Heat Equation - FE.ipynb  FEM - 2D Heat Equation - Forward.ipynb  FEM - 2D Heat Equation - PCG - Dense - LU.ipynb  FEM - 2D Heat Equation - PCG - Dense.ipynb  FEM - 2D Heat Equation - PCG - Sparse - Batch.ipynb  FEM - 2D Heat Equation - PCG - Sparse.ipynb  FEM - 3D Heat Equation - PCG - Sparse.ipynb  IGB.ipynb  Monodomain.ipynb  PCG.ipynb
operators/: atrium.py  atrium_conductivity.py  dataset.py  generate.py  (+4 more)
(+180 files in other folders)
