[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcor"
version = "0.1.2"
description = "High-Performance large-scale cardic electrophysiology simulations on GPUs"
authors = [{ name = "Bei Zhou", email = "bei.zhou@imperial.ac.uk" }]
dependencies = [
    "torch",
    "matplotlib", 
    "numpy",       
    "pygmsh",      
    "pynvml",      
    "pyvista",     
    "scipy",
    "wfdb",
    "seaborn",
    "scikit-learn",
    "pandas "      
]

[tool.setuptools]
packages = ["torchcor", "torchcor.core", "torchcor.ionic", "torchcor.simulator"] 