[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcor"
version = "0.1.8"
description = "High-Performance Large-Scale Cardic Electrophysiology Simulations on GPUs"
authors = [{ name = "Bei Zhou", email = "bei.zhou@imperial.ac.uk" }]
readme = "README.md" 
requires-python = ">=3.8"
dependencies = [
    "torch",
    "matplotlib", 
    "numpy",       
    "pygmsh",      
    "pynvml",      
    "pyvista",     
    "scipy",
    "wfdb",
    "seaborn",
    "scikit-learn",
    "pandas"      
]

[tool.setuptools]
packages = [
    "torchcor", 
    "torchcor.core", 
    "torchcor.ionic", 
    "torchcor.simulator",
    "torchcor.tools",
    "torchcor.electrodes",
    "torchcor.signalanalysis",
    "torchcor.signalanalysis.io",
    "torchcor.signalanalysis.signalanalysis",
    "torchcor.signalanalysis.signalplot",
    "torchcor.signalanalysis.tools"] 